--- a/src/ExpenseExplorer.GUI/Components/App.razor
+++ b/src/ExpenseExplorer.GUI/Components/App.razor
@@ -7,6 +7,8 @@
     <base href="/"/>
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="ExpenseExplorer.GUI.styles.css"/>
+    <link rel="stylesheet" href="_content/Radzen.Blazor/css/dark.css">
+    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <HeadOutlet/>
 </head>
 
