--- a/src/ExpenseExplorer.GUI/Components/App.razor
+++ b/src/ExpenseExplorer.GUI/Components/App.razor
@@ -5,10 +5,10 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <base href="/"/>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="app.css"/>
     <link rel="stylesheet" href="ExpenseExplorer.GUI.styles.css"/>
     <link rel="stylesheet" href="_content/Radzen.Blazor/css/dark.css">
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <HeadOutlet/>
 </head>
 
