Filter incomes by received date and amount

--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -5,14 +5,44 @@
 
 <PageTitle>Income</PageTitle>
 
-<RadzenDataGrid Data="@_incomes" Count="@_count" TItem="IncomeResponse" LoadData="@LoadData" AllowPaging="true"
-                PageSize="@PageSize">
+<RadzenDataGrid
+    @ref="_grid"
+    Data="@_incomes"
+    Count="@_count"
+    TItem="IncomeResponse"
+    LoadData="@LoadData"
+    AllowPaging="true"
+    PageSize="@PageSize"
+    AllowSorting="true"
+    AllowFiltering="true">
     <Columns>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source"/>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Amount" Title="Amount"/>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Category" Title="Category"/>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="ReceivedDate" Title="Received date"/>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Description" Title="Description"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source" Filterable="false"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Amount" Title="Amount">
+            <FilterTemplate>
+                <RadzenFormField AllowFloatingLabel="false" Text="Min amount">
+                    <RadzenNumeric ShowUpDown="false" TValue="decimal?" @bind-Value=@_minAmount
+                                   Change="OnMinAmountChange"/>
+                </RadzenFormField>
+                <RadzenFormField AllowFloatingLabel="false" Text="Max amount">
+                    <RadzenNumeric ShowUpDown="false" TValue="decimal?" @bind-Value=@_maxAmount
+                                   Change="OnMaxAmountChange"/>
+                </RadzenFormField>
+            </FilterTemplate>
+        </RadzenDataGridColumn>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Category" Title="Category" Filterable="false"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="ReceivedDate" Title="Received date">
+            <FilterTemplate>
+                <RadzenFormField AllowFloatingLabel="false" Text="Received after">
+                    <RadzenDatePicker @bind-Value=@_receivedAfter DateFormat="dd.MM.yyyy"
+                                      Change="OnReceivedAfterChange"/>
+                </RadzenFormField>
+                <RadzenFormField AllowFloatingLabel="false" Text="Received before">
+                    <RadzenDatePicker @bind-Value=@_receivedBefore DateFormat="dd.MM.yyyy"
+                                      Change="OnReceivedBeforeChange"/>
+                </RadzenFormField>
+            </FilterTemplate>
+        </RadzenDataGridColumn>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Description" Title="Description" Filterable="false"/>
     </Columns>
 </RadzenDataGrid>
 
@@ -20,16 +50,46 @@
 @code
 {
     const int PageSize = 5;
-#pragma warning disable
-    IEnumerable<IncomeResponse> _incomes;
+    RadzenDataGrid<IncomeResponse> _grid = default!;
+    IEnumerable<IncomeResponse> _incomes = default!;
     int _count;
+    DateTime? _receivedAfter;
+    DateTime? _receivedBefore;
+    decimal? _minAmount;
+    decimal? _maxAmount;
 
     async Task LoadData(LoadDataArgs args)
     {
+        List<string> parameters = [];
+        int pageNumber = args.Skip.HasValue ? args.Skip.Value / PageSize + 1 : 1;
+        parameters.Add($"pageNumber={pageNumber}");
+        parameters.Add($"pageSize={PageSize}");
+        if (_minAmount.HasValue)
+            parameters.Add($"minAmount={_minAmount.Value}");
+
+        if (_maxAmount.HasValue)
+            parameters.Add($"maxAmount={_maxAmount.Value}");
+
+        if (_receivedAfter.HasValue)
+            parameters.Add($"receivedAfter={_receivedAfter:MM/dd/yyyy}");
+
+        if (_receivedBefore.HasValue)
+            parameters.Add($"receivedBefore={_receivedBefore:MM/dd/yyyy}");
+
+        string url = "http://localhost:5163/api/incomes";
+        url += $"?{string.Join("&", parameters)}";
+
         using var client = ClientFactory.CreateClient();
-        int pageNumber = args.Skip.Value / PageSize + 1;
-        var response = await client.GetFromJsonAsync<GetIncomesResponse>($"http://localhost:5163/api/incomes?pageNumber={pageNumber}&pageSize={PageSize}");
-        _count = response.TotalCount;
+        var response = await client.GetFromJsonAsync<GetIncomesResponse>(url);
+        _count = response!.TotalCount;
         _incomes = response.Incomes;
     }
+
+    async Task OnReceivedAfterChange(DateTime? _) => await _grid.Reload();
+
+    async Task OnReceivedBeforeChange(DateTime? _) => await _grid.Reload();
+
+    async Task OnMinAmountChange(decimal? _) => await _grid.Reload();
+
+    async Task OnMaxAmountChange(decimal? _) => await _grid.Reload();
 }
