--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -16,7 +16,13 @@
     AllowSorting="true"
     AllowFiltering="true">
     <Columns>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source" Filterable="false"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source">
+            <FilterTemplate>
+                <RadzenFormField AllowFloatingLabel="false" Text="Source">
+                    <RadzenTextBox @bind-Value=@_source Change="OnSourceChange"/>
+                </RadzenFormField>
+            </FilterTemplate>
+        </RadzenDataGridColumn>
         <RadzenDataGridColumn TItem="IncomeResponse" Property="Amount" Title="Amount">
             <FilterTemplate>
                 <RadzenFormField AllowFloatingLabel="false" Text="Min amount">
@@ -29,7 +35,13 @@
                 </RadzenFormField>
             </FilterTemplate>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Category" Title="Category" Filterable="false"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Category" Title="Category">
+            <FilterTemplate>
+                <RadzenFormField AllowFloatingLabel="false" Text="Category">
+                    <RadzenTextBox @bind-Value=@_category Change="OnCategoryChange"/>
+                </RadzenFormField>
+            </FilterTemplate>
+        </RadzenDataGridColumn>
         <RadzenDataGridColumn TItem="IncomeResponse" Property="ReceivedDate" Title="Received date">
             <FilterTemplate>
                 <RadzenFormField AllowFloatingLabel="false" Text="Received after">
@@ -42,7 +54,13 @@
                 </RadzenFormField>
             </FilterTemplate>
         </RadzenDataGridColumn>
-        <RadzenDataGridColumn TItem="IncomeResponse" Property="Description" Title="Description" Filterable="false"/>
+        <RadzenDataGridColumn TItem="IncomeResponse" Property="Description" Title="Description">
+            <FilterTemplate>
+                <RadzenFormField AllowFloatingLabel="false" Text="Description">
+                    <RadzenTextBox @bind-Value=@_description Change="OnDescriptionChange"/>
+                </RadzenFormField>
+            </FilterTemplate>
+        </RadzenDataGridColumn>
     </Columns>
 </RadzenDataGrid>
 
@@ -57,6 +75,9 @@
     DateTime? _receivedBefore;
     decimal? _minAmount;
     decimal? _maxAmount;
+    string? _source;
+    string? _category;
+    string? _description;
 
     async Task LoadData(LoadDataArgs args)
     {
@@ -76,6 +97,22 @@
         if (_receivedBefore.HasValue)
             parameters.Add($"receivedBefore={_receivedBefore:MM/dd/yyyy}");
 
+        if (!string.IsNullOrWhiteSpace(_source))
+            parameters.Add($"source={_source.Trim()}");
+
+        if (!string.IsNullOrWhiteSpace(_category))
+            parameters.Add($"category={_category.Trim()}");
+
+        if (!string.IsNullOrWhiteSpace(_description))
+            parameters.Add($"description={_description.Trim()}");
+
+        if (!string.IsNullOrWhiteSpace(args.OrderBy))
+        {
+            string[] sort = args.OrderBy.Split(' ');
+            parameters.Add($"sortBy={sort[0]}");
+            parameters.Add($"sortOrder={sort[1]}");
+        }
+
         string url = "http://localhost:5163/api/incomes";
         url += $"?{string.Join("&", parameters)}";
 
@@ -92,4 +129,10 @@
     async Task OnMinAmountChange(decimal? _) => await _grid.Reload();
 
     async Task OnMaxAmountChange(decimal? _) => await _grid.Reload();
+
+    async Task OnSourceChange(string _) => await _grid.Reload();
+
+    async Task OnCategoryChange(string _) => await _grid.Reload();
+
+    async Task OnDescriptionChange(string _) => await _grid.Reload();
 }
