Show filters on data grid by default

--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -19,6 +19,7 @@
     PagingSummaryFormat="Displaying page {0} of {1} <b>(total {2} records)</b>"
     AllowSorting="true"
     AllowFiltering="true"
+    FilterMode="FilterMode.Simple"
     IsLoading=@_isLoading>
     <Columns>
         <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source">
