Set Density of DataGrid to compact

--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -20,7 +20,8 @@
     AllowSorting="true"
     AllowFiltering="true"
     FilterMode="FilterMode.Simple"
-    IsLoading=@_isLoading>
+    IsLoading=@_isLoading
+    Density="Density.Compact">
     <Columns>
         <RadzenDataGridColumn TItem="IncomeResponse" Property="Source" Title="Source">
             <FilterTemplate>
