--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -7,6 +7,8 @@
 @inject IHttpClientFactory ClientFactory
 @rendermode InteractiveServer
 
+<RadzenComponents/>
+
 <PageTitle>Income</PageTitle>
 <RadzenButton
     ButtonStyle="ButtonStyle.Success"
