Add Both grid lines

--- a/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
+++ b/src/ExpenseExplorer.GUI/Components/Pages/Income.razor
@@ -29,6 +29,7 @@
     PageSizeOptions="@_pageSizeOptions"
     ShowPagingSummary="true"
     PagingSummaryFormat="Displaying page {0} of {1} <b>(total {2} records)</b>"
+    GridLines="DataGridGridLines.Both"
     AllowSorting="true"
     AllowFiltering="true"
     AllowAlternatingRows="false"
