Add link to receipts page to nav menu

--- a/src/ExpenseExplorer.GUI/Components/Layout/MainLayout.razor
+++ b/src/ExpenseExplorer.GUI/Components/Layout/MainLayout.razor
@@ -4,6 +4,7 @@
     <RadzenSidebar Style="width: max-content">
         <RadzenPanelMenu DisplayStyle="MenuItemDisplayStyle.IconAndText" ShowArrow="false">
             <RadzenPanelMenuItem Text="Home" Icon="home" Path=""/>
+            <RadzenPanelMenuItem Text="Receipts" Icon="add_shopping_cart" Path="receipts"/>
             <RadzenPanelMenuItem Text="Income" Icon="account_balance" Path="income"/>
         </RadzenPanelMenu>
     </RadzenSidebar>
